--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "currency-exchange-website-group43",
   "version": "1.0.0",
   "description": "This project was created for the final project of INST 377. Our webpage was created to inform and show people about currency exchange rates. The target audience for our system would be business travelers, tourists, people that wish to send money back home from another country, as well as, foreigners in other countries. We believed that our system would make the process very simple and easy to view currency exchange rates on one single site. This system will make the process of accessing currency exchange very straightforward and quick.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon -e '*'"
   },
