--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   "homepage": "https://github.com/kargenta/Currency-Exchange-Website-Group43#readme",
   "dependencies": {
     "@supabase/supabase-js": "^2.43.2",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "nodemon": "^3.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "nodemon": "^3.1.0"
   }
 }
